--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -5,6 +5,7 @@ $colorbright:#fff;
 $colorLight:#999;
 $colorMiddle:#444;
 $colorDark:#000;
+$colorWhatsapp:#65d258;
 $shadowBright:0px 0px 25px #fff;
 $shadowLight:0px 0px 25px #999;
 $shadowMiddle:0px 0px 25px #304622;
