--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -1,11 +1,17 @@
 // variables
 $colorPrimary:#536C43;
 $colorSecondary:#CEAC39;
-$colorbright:#fff;
 $colorLight:#999;
 $colorMiddle:#444;
-$colorDark:#000;
 $colorWhatsapp:#65d258;
-$shadowBright:0px 0px 25px #fff;
 $shadowLight:0px 0px 25px #999;
 $shadowMiddle:0px 0px 25px #304622;
+//mixin
+@mixin shadowWhite (){
+    box-shadow: 0px 0px 25px #fff;
+}
+//map
+$color:(
+    'dark':#000,
+    'bright':#fff
+);
