--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,9 @@ p {
       flex-direction: row;
       flex-wrap: wrap; } }
 
+.service__galery--img {
+  max-width: 28vw; }
+
 /* /Main service index */
 /* Main column */
 .column {
