--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -147,6 +147,9 @@
         flex-wrap: wrap;
     }
 }
+.service__galery--img{
+    max-width: 28vw;
+}
 /* /Main service index */
 /* Main column */
 .column{
