--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -4,7 +4,8 @@ $colorSecondary:#CEAC39;
 $colorLight:#999;
 $colorMiddle:#444;
 $colorWhatsapp:#65d258;
-$shadowLight:0px 0px 25px #999;
+$shadowLight:0px 8px 15px rgba(0, 0, 0, 0.1);
+$shadowLight--hover:0px 15px 20px rgba(0, 0, 0, 0.3);
 $shadowMiddle:0px 0px 25px #304622;
 //mixin
 @mixin shadowWhite (){
