--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ p {
   position: absolute;
   align-items: center;
   background-color: #fff;
-  box-shadow: 0px 0px 25px #999;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   padding: 2% 3% 3% 3%;
   width: 100vw;
   z-index: 2; }
@@ -235,6 +235,12 @@ p {
       display: flex;
       width: 100vw; } }
 
+.hidden {
+  display: none; }
+  @media only screen and (min-width: 768px) {
+    .hidden {
+      display: inline-block; } }
+
 /* Portada section img */
 .section__img {
   object-position: center top;
@@ -259,11 +265,12 @@ p {
   font-weight: normal;
   color: #fff;
   background-color: #536C43;
-  border-radius: 15px;
+  border-radius: 5px;
   border-style: none;
-  box-shadow: 0px 0px 25px #999; }
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); }
   .header__btn:hover {
-    box-shadow: 0px 0px 25px #304622; }
+    color: #fff;
+    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3); }
   @media only screen and (min-width: 768px) {
     .header__btn {
       width: 250px; } }
@@ -298,9 +305,9 @@ p {
 
 .service__galery--img {
   max-width: 90vw; }
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-width: 1024px) {
     .service__galery--img {
-      max-width: 28vw; } }
+      max-width: 27vw; } }
 
 /* /Main service index */
 /* Main column */
@@ -318,7 +325,7 @@ p {
   text-align: center; }
   @media only screen and (min-width: 768px) {
     .column__text {
-      box-shadow: 0px 0px 25px #999;
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
       width: 30vw; } }
 
 /* /Main column */
@@ -336,12 +343,12 @@ p {
       column-gap: 4rem; } }
 
 .card__contains__text {
-  box-shadow: 0px 0px 25px #999;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   text-align: center;
   width: 80vw; }
   @media only screen and (min-width: 768px) {
     .card__contains__text {
-      box-shadow: 0px 0px 25px #999;
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
       text-align: center;
       width: 35vw; } }
   @media only screen and (min-width: 1024px) {
@@ -363,9 +370,51 @@ p {
       color: #444; } }
 
 .title--section {
-  color: #fff;
-  text-transform: uppercase; }
+  color: #fff; }
 
+/* Boton flotante */
+.btn-float {
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+  text-decoration: none;
+  color: #fff;
+  border-radius: 5px;
+  background-color: #65d258;
+  padding: 0.8rem 1rem;
+  position: fixed;
+  bottom: 5%;
+  right: 5%;
+  transition: all 300ms ease 0ms;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  z-index: 99; }
+  .btn-float:hover {
+    font-weight: normal;
+    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+    transform: translateY(-5px);
+    color: #fff; }
+  @media only screen and (min-width: 768px) {
+    .btn-float {
+      font-size: 1rem;
+      font-weight: 600;
+      letter-spacing: 1px;
+      text-decoration: none;
+      color: #fff;
+      border-radius: 5px;
+      background-color: #65d258;
+      padding: 1rem 2rem;
+      position: fixed;
+      bottom: 5%;
+      right: 5%;
+      transition: all 300ms ease 0ms;
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); } }
+
+.brand--whatsapp--float {
+  font-size: 1.3rem;
+  font-weight: bold;
+  vertical-align: middle; }
+
+/* /boton flotante */
 /* Call to action "Seguinos" */
 .action {
   color: #fff;
@@ -400,9 +449,9 @@ p {
   font-weight: normal;
   color: #536C43;
   background-color: #fff;
-  border-radius: 15px;
+  border-radius: 5px;
   border-style: none;
-  box-shadow: 0px 0px 25px #999;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   width: 85vw; }
   .action__btn:hover {
     box-shadow: 0px 0px 25px #fff; }
@@ -567,7 +616,7 @@ p {
   margin-left: 20px;
   border: none;
   border-radius: 5px;
-  box-shadow: 0px 0px 25px #999; }
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); }
   @media only screen and (min-width: 768px) {
     .form__input__row--input {
       width: 75%;
@@ -575,14 +624,14 @@ p {
       margin-left: 20px;
       border: none;
       border-radius: 5px;
-      box-shadow: 0px 0px 25px #999; } }
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); } }
 
 .form__input__select {
   width: 100%;
   padding: 2%;
   border: none;
   border-radius: 5px;
-  box-shadow: 0px 0px 25px #999;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   margin-bottom: 3%; }
   @media only screen and (min-width: 768px) {
     .form__input__select {
@@ -590,7 +639,7 @@ p {
       padding: 2%;
       border: none;
       border-radius: 5px;
-      box-shadow: 0px 0px 25px #999;
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
       margin-bottom: 4%; } }
 
 /* /Contacto */
