--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -91,6 +91,12 @@
         width: 100vw;
     }
 }
+.hidden{
+    display: none;
+    @media only screen and (min-width: 768px) {
+        display: inline-block;
+    }
+}
 /* Portada section img */
 .section__img{
     object-position: center top;
@@ -115,11 +121,12 @@
     font-weight: normal;
     color: map-get($map: $color, $key: 'bright');
     background-color: $colorPrimary;
-    border-radius: 15px;
+    border-radius: 5px;
     border-style: none;
     box-shadow: $shadowLight;
     &:hover{
-        box-shadow: $shadowMiddle;
+        color: map-get($map: $color, $key: 'bright');
+        box-shadow: $shadowLight--hover;
     }
     @media only screen and (min-width: 768px) {
         width: 250px;
@@ -155,8 +162,8 @@
 }
 .service__galery--img{
     max-width: 90vw;
-    @media only screen and (min-width: 768px) {
-        max-width: 28vw;
+    @media only screen and (min-width: 1024px) {
+        max-width: 27vw;
     }
 }
 /* /Main service index */
@@ -221,10 +228,53 @@
 }
 .title--section{
     color: map-get($map: $color, $key: 'bright');
-    text-transform: uppercase;
     @media only screen and (min-width: 1024px) {
     }
 }
+ /* Boton flotante */
+.btn-float {
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-decoration: none;
+    color: map-get($map: $color, $key: 'bright');
+    border-radius: 5px;
+    background-color: $colorWhatsapp;
+    padding: 0.8rem 1rem;
+    position: fixed;
+    bottom: 5%;
+    right: 5%;
+    transition: all 300ms ease 0ms;
+    box-shadow: $shadowLight;
+    z-index: 99;
+    &:hover {
+        font-weight: normal;
+        box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+        transform: translateY(-5px);
+        color:map-get($map: $color, $key: 'bright');
+    }
+    @media only screen and (min-width: 768px) {
+        font-size: 1rem;
+        font-weight: 600;
+        letter-spacing: 1px;
+        text-decoration: none;
+        color: map-get($map: $color, $key: 'bright');
+        border-radius: 5px;
+        background-color: $colorWhatsapp;
+        padding: 1rem 2rem;
+        position: fixed;
+        bottom: 5%;
+        right: 5%;
+        transition: all 300ms ease 0ms;
+        box-shadow: $shadowLight;
+    }
+}
+.brand--whatsapp--float{
+    font-size: 1.3rem;
+    font-weight: bold;
+    vertical-align: middle;
+}
+/* /boton flotante */
 /* Call to action "Seguinos" */
 .action{
     color: map-get($map: $color, $key: 'bright');
@@ -260,7 +310,7 @@
     font-weight: normal;
     color: $colorPrimary;
     background-color:  map-get($map: $color, $key: 'bright');
-    border-radius: 15px;
+    border-radius: 5px;
     border-style: none;
     box-shadow: $shadowLight;
     width: 85vw;
