Incorporacion Semillas y pulido

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,27 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 h1 {
     font-size: 1.5rem;
-    font-weight: bold;
+    font-weight: 500;
     color: #444;
     @media only screen and (min-width: 768px) {
         font-size: 2.5rem;
-        font-weight: bold;
     }
     @media only screen and (min-width: 1024px) {
-        font-size: 3.5rem;
-        font-weight: bold;
+        font-size: 3.7rem;
     }
 }
 h2 {
     font-size: 1.4rem;
-    font-weight: bold;
+    font-weight: 500;
     @media only screen and (min-width: 768px) {
         font-size: 2rem;
-        font-weight: bold;
     }
     @media only screen and (min-width: 1024px) {
-        font-size: 2rem;
-        font-weight: bold;
+        font-size: 3.2rem;
     }
 }
 h3{
@@ -29,12 +25,12 @@ h3{
     font-weight: normal;
     color: #666;
     @media only screen and (min-width: 768px) {
-        font-size: 1.5rem;
+        font-size: 1.8rem;
         font-weight: normal;
         color: #666;
     }
     @media only screen and (min-width: 1024px) {
-        font-size: 1.5rem;
+        font-size: 2.5rem;
         font-weight: normal;
         color: #666;
     }
@@ -57,13 +53,13 @@ h4{
 p {
     font-size: 1rem;
     font-weight: normal;
-    color: #666;
+    color: #757575;
     @media only screen and (min-width: 768px) {
-        font-size: 1.1rem;
+        font-size: 1.15rem;
         font-weight: normal;
     }
     @media only screen and (min-width: 1024px) {
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         font-weight: normal;
     }
 }
