--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -1,6 +1,8 @@
 // variables
-$colorPrimary:#536C43;
-$colorSecondary:#CEAC39;
+$colorPrimary:#367c2b;
+$colorSecondary:#ffc107;
+$colorBright:#fff;
+$colorDark:#000;
 $colorLight:#999;
 $colorMiddle:#444;
 $colorWhatsapp:#65d258;
@@ -11,8 +13,3 @@ $shadowMiddle:0px 0px 25px #304622;
 @mixin shadowWhite (){
     box-shadow: 0px 0px 25px #fff;
 }
-//map
-$color:(
-    'dark':#000,
-    'bright':#fff
-);
