--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -1,6 +1,15 @@
 .mt2{
     margin-top: 2vh;
 }
+.mt__3{
+    margin-top: 1rem;
+    @media only screen and (min-width: 768px) {
+        margin-top: 2rem;
+    }
+    @media only screen and (min-width: 1024px) {
+        margin-top: 3rem;
+    }
+}
 .mt20{
     margin-top: 20vh;
     @media only screen and (min-width: 768px) {
@@ -13,14 +22,33 @@
         margin-top: 20vh;
     }
 }
+.mx__5vw{
+    margin-right: 5vw;
+    margin-left: 5vw;
+}
 .mr--auto{
     margin-right: auto;
 }
 .mr5{
     margin-right: 5%;
 }
+.mb__3{
+    margin-bottom: 1rem;
+    @media only screen and (min-width: 768px) {
+        margin-bottom: 2rem;
+    }
+    @media only screen and (min-width: 1024px) {
+        margin-bottom: 3rem;
+    }
+}
 .mb3{
     margin-bottom: 3vh;
+}
+.mb10{
+    margin-bottom: 5vh;
+    @media only screen and (min-width: 768px) {
+        margin-bottom: 10vh;
+    }
 }
 .mb15{
     margin-bottom: 15vh;
@@ -37,12 +65,21 @@
 .ml5{
     margin-left: 5%;
 }
+.display__i{
+    display: inline;
+}
 .contact__link{
     display: flex;
     text-decoration: none;
 }
 .color--middle{
     color: $colorMiddle;
+}
+.icon__secondary{
+    color: $colorSecondary;
+    font-size: 2rem;
+    margin-right: 1rem;
+    vertical-align: middle;
 }
 .contains{
     font-family: 'Poppins', sans-serif;
@@ -70,15 +107,12 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    left: 5%;
-    margin-top: 30vh;
+    left: 5vw;
+    margin-top: 25vh;
     display: flex;
     flex-direction: column;
     @media only screen and (min-width: 768px) {
-        left: 5%;
-    }
-    @media only screen and (min-width: 1024px) {
-        margin-top: 25vh;
+        margin-top: 30vh;
     }
 }
 .header__img{
@@ -91,6 +125,22 @@
         width: 100vw;
     }
 }
+.position__r{
+    position: relative;
+}
+.elementor-background-overlay{
+    background-color: $colorPrimary;
+    opacity: 0.43;
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100vw;
+    height: 50vh;
+    @media only screen and (min-width: 768px) {
+        width: 100vw;
+        height: 80vh;
+    }
+}
 .hidden{
     display: none;
     @media only screen and (min-width: 768px) {
@@ -101,8 +151,12 @@
 .section__img{
     object-position: center top;
     width: 100vw;
-    height: 80vh;
+    height: 50vh;
     object-fit: cover;
+    @media only screen and (min-width: 768px) {
+        width: 100vw;
+        height: 80vh;
+    }
 }
 .bg__primary{
     background-color: rgba(40,67,23,0.78);
@@ -119,13 +173,13 @@
     width: 55vw;
     font-size: 1.2rem;
     font-weight: normal;
-    color: map-get($map: $color, $key: 'bright');
+    color: $colorBright;
     background-color: $colorPrimary;
     border-radius: 5px;
     border-style: none;
     box-shadow: $shadowLight;
     &:hover{
-        color: map-get($map: $color, $key: 'bright');
+        color: $colorBright;
         box-shadow: $shadowLight--hover;
     }
     @media only screen and (min-width: 768px) {
@@ -146,9 +200,16 @@
 /* /Main intro */
 /* Main service index */
 .service{
-    margin: 0 5% 10% 5%;
+    margin: 0 5vw 0 5vw;
+    @media only screen and (min-width: 768px) {
+        margin: 0 5vw 0 5vw;
+    }
+    @media only screen and (min-width: 1024px) {
+        margin: 0 15vw 0 15vw;
+    }
 }
 .service__galery{
+    margin: 0 15% 10% 15%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -166,7 +227,74 @@
         max-width: 27vw;
     }
 }
+.service__cosembrar{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
+    @media only screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: row;
+        gap: 4rem;
+    }
+}
+.service__cosembrar__img{
+    @media only screen and (min-width: 768px) {
+        width: 40vw;
+    }
+}
+.service__cosembrar__img--style{
+    border-radius: 10px;
+    box-shadow: $shadowLight--hover;
+}
+.service__cosembrar__text{
+    text-align: start;
+    @media only screen and (min-width: 768px) {
+        width: 40vw;
+    }
+}
+.link__more{
+    font-weight: 500;
+    color: $colorSecondary;
+    font-size: 1rem;
+    text-decoration: none;
+    &:hover{
+        color: $colorMiddle;
+    }
+    @media only screen and (min-width: 768px) {
+        font-size: 1.5rem;
+    }
+}
+.size3{
+    font-size: 3rem;
+    vertical-align: middle;
+}
 /* /Main service index */
+/* semillas (galeria productos) */
+.products__galery{
+    margin-left: 5vw;
+    margin-right: 5vw;
+}
+.products__galery__content{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    @media only screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+}
+.products__galery__content__img{
+    max-width: 60vw;
+    @media only screen and (min-width: 768px) {
+        max-width: 27vw;
+    }
+}
 /* Main column */
 .column{
     display: flex;
@@ -227,8 +355,15 @@
     }
 }
 .title--section{
-    color: map-get($map: $color, $key: 'bright');
+    font-weight: 500;
+    font-size: 2.5rem;
+    color: $colorBright;
+    text-shadow: 2px 2px 4px rgba($colorDark, 0.45);
+    @media only screen and (min-width: 768px) {
+        font-size: 2.5rem;
+    }
     @media only screen and (min-width: 1024px) {
+        font-size: 3rem;
     }
 }
  /* Boton flotante */
@@ -237,7 +372,7 @@
     font-weight: 600;
     letter-spacing: 1px;
     text-decoration: none;
-    color: map-get($map: $color, $key: 'bright');
+    color: $colorBright;
     border-radius: 5px;
     background-color: $colorWhatsapp;
     padding: 0.8rem 1rem;
@@ -249,16 +384,16 @@
     z-index: 99;
     &:hover {
         font-weight: normal;
-        box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+        box-shadow: $shadowLight--hover;
         transform: translateY(-5px);
-        color:map-get($map: $color, $key: 'bright');
+        color: $colorBright;
     }
     @media only screen and (min-width: 768px) {
         font-size: 1rem;
         font-weight: 600;
         letter-spacing: 1px;
         text-decoration: none;
-        color: map-get($map: $color, $key: 'bright');
+        color: $colorBright;
         border-radius: 5px;
         background-color: $colorWhatsapp;
         padding: 1rem 2rem;
@@ -277,13 +412,13 @@
 /* /boton flotante */
 /* Call to action "Seguinos" */
 .action{
-    color: map-get($map: $color, $key: 'bright');
+    color: $colorBright;
     background-color: $colorPrimary;
     text-align: center;
     padding-top: 10%;
     padding-bottom: 10%;
     @media only screen and (min-width: 1024px) {
-        color: map-get($map: $color, $key: 'bright');
+        color: $colorBright;
         background-color: $colorPrimary;
         text-align: center;
         padding-top: 7%;
@@ -291,46 +426,49 @@
     }
 }
 .action__content{
-    margin-top: 4%;
+    margin-top: 5%;
+    margin-bottom: 1%;
     @media only screen and (min-width: 1024px) {
-        margin-top: 2%;
+        margin-top: 3%;
+        margin-bottom: 1%;
     }
 }
 .action__icons{
-    color: map-get($map: $color, $key: 'bright');
+    color: $colorBright;
     font-size: 1.4rem;
     &:hover{
-        color: $colorSecondary;
+        color: $colorBright;
+        text-shadow: 3px 3px 11px rgba($colorBright, 0.45);
     }
 }
 /* /Call to action "Seguinos" */
 /* Call to action "Contactanos" */
 .action__btn{
-    font-size: 1.2rem;
-    font-weight: normal;
+    text-decoration: none;
+    font-size: 1rem;
+    font-weight: 500;
     color: $colorPrimary;
-    background-color:  map-get($map: $color, $key: 'bright');
+    background-color:  $colorBright;
     border-radius: 5px;
     border-style: none;
     box-shadow: $shadowLight;
-    width: 85vw;
+    padding: 9px 30px 11px;
     &:hover{
         @include shadowWhite();
+        color: $colorPrimary;
     }
     @media only screen and (min-width: 768px) {
         font-size: 1.3rem;
-        width: 250px;
+        padding: 7px 20px 9px;
     }
 }
 .colorWhite{
-    color:map-get($map: $color, $key: 'bright');
+    color: $colorBright;
 }
 /* /Call to action "Contactanos" */
 /* Tabla Price Acopio */
 .prices__table{
     width: 90vw;
-    border-collapse: collapse;
-    @include shadowWhite();
     @media only screen and (min-width: 768px) {
         width: 80vw;
     }
@@ -338,15 +476,8 @@
         width: 60vw;
     }
 }
-.prices__table__tr:nth-child(even){
-    background-color: #f2f2f2;
-}
-.prices__table__tr:hover{
-    background-color: #ddd;
-}
 .prices__table__td{
     padding: 2%;
-    border: 1px solid #ddd;
     text-align: center;
 }
 /* /Tabla Price Acopio */
@@ -357,22 +488,24 @@
     row-gap: 2rem;
     align-items:center;
     text-align: center;
+    margin-right: 5vw;
+    margin-left: 5vw;
     @media only screen and (min-width: 768px) {
         flex-direction: row;
-        column-gap: 2rem;
+        column-gap: 1rem;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: space-between;
     }
 }
 .map--responsive{
     width: 90vw;
     overflow:hidden;
-    padding-bottom:56.25%;
-    position:relative;
     height:0;
+    position:relative;
+    padding-bottom:56.25%;
     @media only screen and (min-width: 768px) {
-        width: 80vw;
-        padding-bottom:40%;
+        width: 65vw;
+        padding-bottom:50%;
     }
     @media only screen and (min-width: 1024px) {
         width: 60vw;
@@ -385,129 +518,338 @@
     width:100%;
     position:absolute;
 }
-/* Mapa */
-/* Contacto */
-.contact__details{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.map--responsive__phone{
+    font-size: 2rem;
+    font-weight: 300;
     text-align: center;
     @media only screen and (min-width: 768px) {
-        align-items: flex-start;
-        flex-direction: row;
-        align-items: top;
-        justify-content: space-evenly;
+        font-size: 1.2rem;
     }
 }
-.contact__details--mails{
+/* Mapa */
+/* Contacto */
+.contact__content{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+    text-align: center;
+    @media only screen and (min-width: 768px) {
+        grid-template-columns: 1fr 1fr;
+    }
+    @media only screen and (min-width: 1024px) {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+.contact__content__mails{
     justify-content: center;
 }
-.mails__mail{
+.contact__content__mails--title{
     font-size: 1rem;
+    margin-top: 0.4rem;
+    margin-bottom: 0.3rem;
+    @media only screen and (min-width: 768px) {
+        font-size: 1.15rem;
+
+    }
+    @media only screen and (min-width: 1024px) {
+        font-size: 1.4rem;
+        margin-top: 0.8rem;
+        margin-bottom: 0.6rem;
+    }
+}
+.contact__content__mails--mail{
     font-weight: normal;
     color: $colorMiddle;
     text-decoration: none;
     @media only screen and (min-width: 768px) {
-        font-size: 1.1rem;
-        font-weight: normal;
-    }
-    @media only screen and (min-width: 1024px) {
-        font-size: 1.2rem;
         font-weight: normal;
     }
     &:hover{
-        color: map-get($map: $color, $key: 'dark');
+        color: $colorDark;
     }
 }
  //extend
 .action__mail{
-    @extend .mails__mail;
-    color: map-get($map: $color, $key: 'bright');
+    @extend .contact__content__mails--mail;
+    color: $colorBright;
+    font-size: 1.1rem;
     &:hover{
-        color: $colorSecondary;
+        color: $colorBright;
+        text-shadow: 3px 3px 11px rgba($colorBright, 0.45);
+    }
+    @media only screen and (min-width: 768px) {
+        font-size: 1.3rem;
     }
 }
-.mails__icons{
-    font-size: 1.3rem;
+.icons__contact{
+    font-size: 2rem;
     color: $colorMiddle;
     text-decoration: none;
-    &:hover{
-        color: map-get($map: $color, $key: 'dark');
+    @media only screen and (min-width: 768px) {
+        font-size: 2.4rem;
     }
-}
-.contact__social{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @media only screen and (min-width: 1024px) {
+        font-size: 2.8rem;
+    }
 }
 .icon__primary{
     font-size: 1.3rem;
     color: $colorPrimary;
     &:hover{
-        color: $colorSecondary;
+        text-shadow: 2px 2px 4px rgba($colorDark, 0.45);
     }
-}
-.form{
-    order: 1;
-    text-align: center;
-    width: 90vw;
-    padding-left: 5%;
-    padding-right: 5%;
-    margin-top: 10%;
     @media only screen and (min-width: 768px) {
-        order: 2;
-        text-align: center;
-        width: 60vw;
-        padding-left: 5%;
-        padding-right: 5%;
-        margin-top: 0%;
-        vertical-align: top;
+        font-size: 2rem;
+    }
+    @media only screen and (min-width: 1024px) {
+        font-size: 2.4rem;
     }
 }
-.form__input__row{
+/* /Contacto */
+.service__detail{
+    display: flex;
+    flex-direction: column;
+    gap: 0.90rem;
+    @media only screen and (min-width: 768px) {
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 0rem;
+    }
+    @media only screen and (min-width: 1024px) {
+    }
+}
+.service__detail__text{
+    width: 90vw;
+    margin-left: 5vw;
+    @media only screen and (min-width: 768px) {
+        width: 45vw;
+    }
+}
+.service__detail__images{
+    justify-content: center;
+    display: flex;
+}
+.service__detail__img{
+    min-width: 300px;
+    max-width: 300px;
+    @media only screen and (min-width: 768px) {
+        min-width: 300px;
+        max-width: 300px;
+        margin-top: -5%;
+        margin-right: 5vw;
+    }
+    @media only screen and (min-width: 1024px) {
+        min-width: 430px;
+        max-width: 430px;
+        margin-top: -5%;
+    }
+}
+.service__detail__nose{
+    min-width: 300px;
+    max-width: 300px;
+    justify-content: center;
+    display: flex;
+    @media only screen and (min-width: 768px) {
+        min-width: 300px;
+        max-width: 300px;
+    }
+    @media only screen and (min-width: 1024px) {
+        min-width: 430px;
+        max-width: 430px;
+    }
+}
+.img__intro{
+    min-width: 300px;
+    max-width: 300px;
+    @media only screen and (min-width: 768px) {
+        min-width: 300px;
+        max-width: 300px;
+    }
+    @media only screen and (min-width: 1024px) {
+        min-width: 430px;
+        max-width: 430px;
+    }
+}
+.img__intro__circle{
+    @extend .img__intro;
+        border-radius: 50%;
+}
+.img__intro__rounded{
+    position: absolute;
+    border-radius: 50%;
+    left: 20px;
+    top: 200px;
+    width: 120px;
+    height: 120px;
+    min-width: 120px;
+    min-height: 120px;
+    max-width: 120px;
+    max-height: 120px;
+    border: 3px solid #fff;
+    box-shadow: $shadowLight;
+    @media only screen and (min-width: 768px) {
+        width: 140px;
+        height: 140px;
+        min-width: 140px;
+        min-height: 140px;
+        max-width: 140px;
+        max-height: 140px;
+        border: 4px solid #fff;
+        left: 30px;
+        top: 215px;
+    }
+    @media only screen and (min-width: 1024px) {
+        width: 150px;
+        height: 150px;
+        min-width: 140px;
+        min-height: 140px;
+        max-width: 140px;
+        max-height: 140px;
+        border: 6px solid #fff;
+        left: 35px;
+        top: 300px;
+    }
+}
+.title--center--content{
+    text-align: center;
+    margin: 20% 5vw 5% 5vw;
+    color: $colorMiddle;
+    @media only screen and (min-width: 768px) {
+        margin-bottom: 5%;
+        margin-top: 0;
+    }
+    @media only screen and (min-width: 1024px) {
+        margin-top: 8%;
+    }
+}
+.cotizacion{
+    display: flex;
+    margin-right: 5vw;
+    margin-left: 5vw;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 5;
+    @media only screen and (min-width: 768px) {
+        margin-right: 5vw;
+        margin-left: 5vw;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: flex-start;
+    }
+    @media only screen and (min-width: 1024px) {
+        align-items: flex-start;
+    }
+}
+.cotizacion--date{
+    display: flex;
+    justify-content: right;
+    font-size: 1rem;
+}
+.cotizacion--bank{
+    font-size: 0.90rem;
+    font-weight: 400;
+    text-align: right;
+    @media only screen and (min-width: 768px) {
+        font-size: 1rem;
+        text-align: left;
+        font-weight: 200;
+    }
+    @media only screen and (min-width: 1024px) {
+        font-size: 1.5rem;
+        text-align: left;
+    }
+}
+.cotizacion--details{
+    font-size: 2rem;
+    font-weight: 400;
+}
+.cotizacion__granos--details{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+.cotizacion__granos--details--strong{
+    font-size: 1.1rem;
+    font-weight: 500;
+    margin-right: 1rem;
+    @media only screen and (min-width: 768px) {
+        margin-right: 1rem;
+    }
+    @media only screen and (min-width: 1024px) {
+        font-size: 1.5rem;
+        margin-right: 5rem;
+    }
+}
+.cotizacion__dolar{
+    margin-bottom: 5%;
+    max-width: 290px;
+    @media only screen and (min-width: 768px) {
+        margin-bottom: 0;
+        max-width: 290px;
+    }
+    @media only screen and (min-width: 1024px) {
+        max-width: 100%;
+    }
+}
+.cotizacion__granos{
+    margin-bottom: 5%;
+    max-width: 290px;
+    @media only screen and (min-width: 768px) {
+        margin-bottom: 0;
+        max-width: 290px;
+    }
+    @media only screen and (min-width: 1024px) {
+        max-width: 100%;
+    }
+}
+/* Semillas  */
+.products {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    margin-bottom: 3%;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 1rem;
+    @media only screen and (min-width: 768px) {
+        gap: 4rem;
+    }
+}
+.products__brand__img {
+    width: 30vw;
+    @media only screen and (min-width: 768px) {
+        width: 15vw;
+    }
+}
+/* /Semillas  */
+/* Nosotros  */
+.us{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
+    margin-left: 5vw;
+    margin-right: 5vw;
     @media only screen and (min-width: 768px) {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        width: 100%;
-        margin-bottom: 4%;
     }
 }
-.form__input__row--input{
-    width: 75%;
-    padding: 2%;
-    margin-left: 20px;
-    border: none;
-    border-radius: 5px;
-    box-shadow: $shadowLight;
+.us__img{
     @media only screen and (min-width: 768px) {
-        width: 75%;
-        padding: 2%;
-        margin-left: 20px;
-        border: none;
-        border-radius: 5px;
-        box-shadow: $shadowLight;
+        width: 40vw;
     }
 }
-.form__input__select{
-    width: 100%;
-    padding: 2%;
-    border: none;
-    border-radius: 5px;
-    box-shadow: $shadowLight;
-    margin-bottom: 3%;
+.style__h1{
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #444;
     @media only screen and (min-width: 768px) {
-        width: 100%;
-        padding: 2%;
-        border: none;
-        border-radius: 5px;
-        box-shadow: $shadowLight;
-        margin-bottom: 4%;
+        font-size: 2.5rem;
+    }
+    @media only screen and (min-width: 1024px) {
+        font-size: 3.7rem;
     }
 }
-/* /Contacto */
+/* /Nosotros  */
