--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -5,10 +5,10 @@
     grid-template-areas: "footer--adress" "footer--contact" "copyright";
     @media only screen and (min-width: 768px) {
         display: grid;
-        grid-template-columns: 29% 13% 24% 24%;
+        grid-template-columns: 21% 13% 24% 32%;
         grid-template-rows: auto auto;
-        grid-template-areas: 
-            "footer--logo footer--link footer--adress footer--contact" 
+        grid-template-areas:
+            "footer--logo footer--link footer--adress footer--contact"
             "copyright copyright copyright copyright";
     }
 }
@@ -42,7 +42,7 @@
     font-size: 0.90rem;
     text-decoration: none;
     &:hover{
-        color: map-get($map: $color, $key: 'dark');
+        color: $colorDark;
         font-size: 0.90rem;
         font-weight: 500;
     }
@@ -52,7 +52,7 @@
     color: $colorMiddle;
     font-size: 0.90rem;
     &:hover{
-    color: map-get($map: $color, $key: 'dark');
+    color: $colorDark;
     font-size: 0.90rem;
     font-weight: 500;
     }
@@ -61,6 +61,7 @@
     text-decoration: none;
     color: $colorSecondary;
     font-size: 0.90rem;
+    font-weight: 600;
     &:hover{
         color: $colorSecondary;
     }
@@ -70,7 +71,7 @@
     color: $colorLight;
     font-size: 0.90rem;
     &:hover{
-        color: map-get($map: $color, $key: 'dark');
+        color: $colorDark;
     }
 }
 .footer__copyright{
@@ -108,12 +109,12 @@
 }
 .brand--whatsapp{
     background-color: $colorWhatsapp;
-    color: map-get($map: $color, $key: 'bright');
+    color: $colorBright;
     padding: 0.30rem 0.50rem;
     border-radius: 50%;
     &:hover{
         color: $colorWhatsapp;
-        background-color: map-get($map: $color, $key: 'bright');
+        background-color: $colorBright;
         border: $colorWhatsapp 2px solid;
     }
 }
@@ -125,6 +126,6 @@
         grid-area: footer--link;
     }
     .footer__content__logo{
-        width: 80%;
+        width: 100%;
     }
 }
