--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -1,6 +1,7 @@
 // variables
 $colorPrimary:#367c2b;
 $colorSecondary:#ffc107;
+$colorSecondaryOld: #ceac39;
 $colorBright:#fff;
 $colorDark:#000;
 $colorLight:#999;
