--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 h1 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 500;
     color: #444;
+    @media only screen and (min-width: 325px) {
+        font-size: 1.5rem;
+    }
     @media only screen and (min-width: 768px) {
         font-size: 2.5rem;
     }
@@ -17,7 +20,7 @@ h2 {
         font-size: 2rem;
     }
     @media only screen and (min-width: 1024px) {
-        font-size: 3.2rem;
+        font-size: 2.9rem;
     }
 }
 h3{
@@ -51,9 +54,13 @@ h4{
     }
 }
 p {
-    font-size: 1rem;
+    font-size: 0.80rem;
     font-weight: normal;
     color: #757575;
+    @media only screen and (min-width: 325px) {
+        font-size: 1rem;
+        font-weight: normal;
+    }
     @media only screen and (min-width: 768px) {
         font-size: 1.15rem;
         font-weight: normal;
