--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -16,9 +16,12 @@
     }
 }
 .nav__logo{
+    min-width: 22vh;
+    @media only screen and (min-width: 401px) {
     min-width: 33vh;
     display: flex;
     align-items: center;
+    }
     @media only screen and (min-width: 768px) {
         min-width: 20vh;
         display: flex;
@@ -55,5 +58,11 @@
         animation-fill-mode: both;
         animation-play-state: running;
         animation-name: icon__animation;
+    }
+}
+.ul__mt{
+    margin-top: 1rem;
+    @media only screen and (min-width: 768px) {
+        margin-top: 0rem;
     }
 }
