--- a/css/style.css
+++ b/css/style.css
@@ -855,7 +855,7 @@ p {
 .img__intro__rounded {
   position: absolute;
   border-radius: 50%;
-  left: 10px;
+  left: 0px;
   top: 160px;
   width: 90px;
   height: 90px;
@@ -863,28 +863,33 @@ p {
   max-height: 90px;
   border: 3px solid #fff;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); }
+  @media only screen and (min-width: 325px) {
+    .img__intro__rounded {
+      width: 110px;
+      height: 110px;
+      max-width: 110px;
+      max-height: 110px;
+      border: 4px solid #fff;
+      left: 0px;
+      top: 200px; } }
   @media only screen and (min-width: 768px) {
     .img__intro__rounded {
       width: 140px;
       height: 140px;
-      min-width: 140px;
-      min-height: 140px;
       max-width: 140px;
       max-height: 140px;
       border: 4px solid #fff;
-      left: 30px;
+      left: 0px;
       top: 215px; } }
   @media only screen and (min-width: 1024px) {
     .img__intro__rounded {
       width: 150px;
       height: 150px;
-      min-width: 140px;
-      min-height: 140px;
-      max-width: 140px;
-      max-height: 140px;
+      max-width: 150px;
+      max-height: 150px;
       border: 6px solid #fff;
-      left: 35px;
-      top: 300px; } }
+      left: 0px;
+      top: 310px; } }
 
 .title--center--content {
   text-align: center;
